CKAD/services-networking/pod-clusterip-definition.yaml
apiVersion: v1
kind: Pod

metadata:
  name: myapp-pod
  labels:
    app: myapp
    type: back-end
spec:
  containers:
  - name: nginx-container
    image: nginx
