CKAD/services-networking/pod-nodeport-definition.yaml
apiVersion: v1
kind: Pod

metadata:
  name: myapp-pod
  labels:
    app: myapp-pod
    type: frontend
spec:
  containers:
  - name: nginx-container
    image: nginx
